kubernetes/apps/media/seerr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
