kubernetes/apps/media/seerr/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - seerr.unscfleet.com
    - requests.unscfleet.com
  rules:
    - backendRefs:
        - name: seerr
          port: 80
